<resources>
    <string name="app_name">Midterm 07590673</string>
    <string name="toast_welcome">Welcome Promlert Lovichit</string>
    <string name="toast_welcome1">Welcome Paisit Wattanapattaraporn</string>
    <string name="login_success">Login Success</string>
    <string name="login_invalid">Invalid username or password</string>
    <string name="add_to_story">Add To Story</string>
    <string name="view_as">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="lives_in">Lives in</string>
    <string name="from">From</string>
    <string name="login_to_facebook">Login To Facebook</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
